--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -271,7 +271,7 @@
 }
 
 /* Bullets pequeños para items normales de lista */
-.prose-custom ul .list-item-with-icon::after {
+/*.prose-custom ul .list-item-with-icon::after {
   content: "";
   position: absolute;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' aria-hidden='true' viewBox='0 0 32 32' focusable='false'%3E%3Ccircle stroke='none' fill='%23c00' cx='16' cy='16' r='10'%3E%3C/circle%3E%3C/svg%3E");
@@ -281,7 +281,7 @@
   top: 2px;
   width: 12px;
   height: 12px;
-}
+}*/
 
 /* Bullet grande para el primer item de lista */
 /*.prose-custom ul li:first-child::after {
@@ -310,7 +310,7 @@
   margin: 1.5rem 0;
 }
 
-.prose-custom ol .list-item-with-icon {
+.prose-custom ol li {
   display: block;
   margin-bottom: 0.5rem;
   padding: 0.75rem 0;
@@ -318,7 +318,7 @@
   position: relative;
 }
 
-.prose-custom ol .list-item-with-icon::before {
+.prose-custom ol li::before {
   counter-increment: item;
   content: counter(item) ".";
   position: absolute;
