--- a/src/components/RichText/style.module.css
+++ b/src/components/RichText/style.module.css
@@ -43,3 +43,26 @@
   height: 20px;
 }
 
+.list_item_with_icon_circle::after{
+  content: "";
+  position: absolute;
+  background-image: url("/circleIconType.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  left: 0;
+  top: 2px;
+  width: 20px;
+  height: 20px;
+}
+
+.list_item_with_icon_circle::after{
+  content: "";
+  position: absolute;
+  background-image: url("/locationIconType.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  left: 0;
+  top: 2px;
+  width: 20px;
+  height: 20px;
+}
