--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -150,7 +150,8 @@ html{
   line-height: 1.7; /* Un poco más de aire para mejorar la lectura */
   font-size: clamp(10.9px,1vw,20.48px);   /* Tamaño de fuente base ligeramente más grande */
   color: #333;        /* Color de texto principal más suave que el negro puro */
-  max-width: 75ch;     /* Limita el ancho para una legibilidad óptima */
+  width: 90%;
+  max-width: 1500px;     /* Limita el ancho para una legibilidad óptima */
   margin: 2rem auto;   /* Centra el contenedor en la página */
 }
 
@@ -619,7 +620,8 @@ html{
   line-height: 1.7; /* Un poco más de aire para mejorar la lectura */
   font-size: clamp(10.9px,1vw,20.48px);   /* Tamaño de fuente base ligeramente más grande */
   color: #333;        /* Color de texto principal más suave que el negro puro */
-  max-width: 75ch;     /* Limita el ancho para una legibilidad óptima */
+  width: 90%;
+  max-width: 1500px;     /* Limita el ancho para una legibilidad óptima */
   margin: 2rem auto;   /* Centra el contenedor en la página */
 }
 
@@ -911,7 +913,8 @@ html{
   line-height: 1.7; /* Un poco más de aire para mejorar la lectura */
   font-size: clamp(10.9px,1vw,20.48px);   /* Tamaño de fuente base ligeramente más grande */
   color: #333;        /* Color de texto principal más suave que el negro puro */
-  max-width: 75ch;     /* Limita el ancho para una legibilidad óptima */
+  width: 90%;
+  max-width: 1500px;     /* Limita el ancho para una legibilidad óptima */
   margin: 2rem auto;   /* Centra el contenedor en la página */
 }
 
@@ -1198,7 +1201,8 @@ html{
   line-height: 1.7; /* Un poco más de aire para mejorar la lectura */
   font-size: clamp(10.9px,1vw,20.48px);   /* Tamaño de fuente base ligeramente más grande */
   color: #333;        /* Color de texto principal más suave que el negro puro */
-  max-width: 75ch;     /* Limita el ancho para una legibilidad óptima */
+  width: 90%;
+  max-width: 1500px;     /* Limita el ancho para una legibilidad óptima */
   margin: 2rem auto;   /* Centra el contenedor en la página */
 }
 
